fix brand wrapping

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ nav a.logo {
   color: #fff;
   text-decoration: none;
   margin-bottom: 0;
+  white-space: nowrap;
 }
 nav ul {
   list-style: none;
